--- a/src/public/index.html
+++ b/src/public/index.html
@@ -43,10 +43,12 @@
                 <button class="btn btn-success mt-3">Enviar</button>
             </form>
             <hr>
-            <button class="btn btn-info mt-3" onclick="location.href = '/api/productos/vista'">Vista handlebars
+            <button class="btn btn-info mt-3" onclick="location.href ='/api/productos/vista'">Vista handlebars
                 productos</button>
             <br>
             <br>
+
+            <!-- Sobre este div renderizamos la table de datos con Socket.io -->
             <div id="datos"></div>
 
         </div>
